# B2-NAVIGATION

./: .gitignore  .gitmodules  README.md  README_UNCERTAINTY_FUSION_PLAN.md
bt/door_bt/: CMakeLists.txt  package.xml
bt/door_bt/bt_trees/tests/: door_bt_RCI.xml  door_plan_controller_L1.xml
bt/door_bt/config/: L1.yaml  L2.yaml  L3.yaml  floor_config.yaml
bt/door_bt/src/: door_bt_runner.cpp
bt/door_bt/src/bt_nodes/: bt_plugin.cpp  door_plan_controller.cpp
bt/elevator_bt/: CMakeLists.txt  package.xml
bt/elevator_bt/bt_trees/tests/: navigate_with_elevator.xml  senario_elevator.xml
bt/elevator_bt/config/: elevator_lift1.yaml  elevator_lift2.yaml
bt/elevator_bt/src/: main_bt.cpp
bt/elevator_bt/src/bt_nodes/: call_elevator_to_floor.cpp  elevator_bt_nav2_plugin.cpp  elevator_client.cpp  get_cabin_goal.cpp  nav2_navigate_to_pose.cpp  ok_node.cpp  select_nearest_elevator.cpp  set_elevator_door.cpp  wait_cabin_at_target.cpp  wait_door_open.cpp  wait_floor_command.cpp  wait_robot_inside_cabin.cpp  wait_robot_near_elevator.cpp  wait_robot_outside_elevator.cpp
bt/floor_change_bt/: CMakeLists.txt  package.xml
bt/floor_change_bt/bt_trees/: manual_select_floor_change.xml  map_change_elev_stair.xml
bt/floor_change_bt/src/: floor_change_bt_runner.cpp
bt/floor_change_bt/src/bt_nodes/: get_current_floor.cpp  publish_door_yaml.cpp  publish_initial_pose_from_tf.cpp  select_floor_config.cpp
bt/stair_bt/: CMakeLists.txt  package.xml
bt/stair_bt/bt_trees/: senario_stairs.xml  stairs.xml
bt/stair_bt/config/: stairs.yaml
bt/stair_bt/src/: stair_bt_nav2_plugin.cpp  stair_bt_runner.cpp
bt/stair_bt/src/bt_nodes/: align_with_stairs.cpp  check_floor_different.cpp  climb_flight_rl.cpp  compute_next_floor.cpp  get_target_floor_from_topic.cpp  move_forward_distance.cpp  nav2_navigate_to_pose.cpp  select_stair_entrance.cpp  turn_relative.cpp
bytetrack_ros/: README.md  (+2 more)
plugins/gazebo_actor_pose_pub/: CMakeLists.txt  package.xml
plugins/gazebo_actor_pose_pub/src/: gazebo_ros_actor_pose_pub.cpp
plugins/hinged_door_plugin/: CMakeLists.txt  package.xml
plugins/hinged_door_plugin/src/: double_hinged_door_plugin.cpp  single_hinged_door_plugin.cpp
plugins/lift_elevator_plugin/: CMakeLists.txt  package.xml
plugins/lift_elevator_plugin/src/: elevator_plugin.cpp
plugins/sliding_door_plugin/: CMakeLists.txt  package.xml
plugins/sliding_door_plugin/src/: double_sliding_door_plugin.cpp  single_sliding_door_plugin.cpp
plugins/world_tf_publisher/: CMakeLists.txt  package.xml
plugins/world_tf_publisher/src/: world_tf_publisher.cpp
rl_action/: package.xml  setup.cfg  setup.py
rl_action/rl_action/: command.py
rl_sar/: CMakeLists.txt  README.md  package.xml
rl_sar/action/: RobotActivation.action  SetLocomotionMode.action  SetNavigationMode.action
rl_sar/config/: nav2_params.yaml  nav2_params_scan_filtered.yaml
rl_sar/include/: rl_real_a1.hpp  rl_real_g1.hpp  rl_real_go2.hpp  rl_real_l4w4.hpp  rl_real_lite3.hpp  rl_sim.hpp
rl_sar/launch/: gazebo.launch.py  nav2.launch.py
rl_sar/models/BathroomSink/: model.sdf
rl_sar/models/BedsideTable/: model.sdf
rl_sar/models/Bookshelf/: model.sdf
rl_sar/models/Chair/: model.sdf
rl_sar/models/CoffeeTable/: model.sdf
rl_sar/models/DeskChair/: model.sdf
rl_sar/models/DigitalKiosk/: model.sdf
rl_sar/models/EscalatorStart/: model.sdf
rl_sar/models/FoodCourtBenchShort/: model.sdf
rl_sar/models/FoodCourtTable1/: model.sdf
rl_sar/models/Fortress island/: model.config  model.sdf
rl_sar/models/Fridge/: model.sdf
rl_sar/models/HeadphonesRack1/: model.sdf
rl_sar/models/KitchenCountertop/: model.sdf
rl_sar/models/MainTable/: model.sdf
rl_sar/models/NormalBed/: model.sdf
rl_sar/models/NurseDesk/: model.sdf
rl_sar/models/Shower/: model.sdf
rl_sar/models/Sofa/: model.sdf
rl_sar/models/StorageRack/: model.sdf
rl_sar/models/Suitcase1/: model.sdf
rl_sar/models/Suitcase2/: model.sdf
rl_sar/models/Toilet/: model.sdf
rl_sar/models/TrashBin/: model.sdf
rl_sar/models/VendingMachine/: model.sdf
rl_sar/models/Walking_actor/: model.config
rl_sar/models/WoodenChair/: model.sdf
rl_sar/models/hotel_L1/: model.sdf
rl_sar/models/hotel_L1/meshes/: floor_6.mtl  floor_7.mtl  model.material  wall_2.mtl  wall_4.mtl  wall_5.mtl  wall_6.mtl  wall_7.mtl  wall_8.mtl
rl_sar/models/hotel_L1_before/: model.config  model.sdf
rl_sar/models/hotel_L1_before/meshes/: floor_2.mtl  floor_3.mtl  model.material  wall_3.mtl  wall_4.mtl  wall_5.mtl  wall_6.mtl
rl_sar/models/hotel_L2/: model.config  model.sdf
rl_sar/models/hotel_L2/meshes/: floor_7.mtl  model.material  wall_1.mtl
rl_sar/models/hotel_L2_before/: model.config  model.sdf
rl_sar/models/hotel_L2_before/meshes/: floor_1.mtl  floor_2.mtl  floor_5.mtl
rl_sar/models/hotel_L3/: model.config  model.sdf
rl_sar/models/hotel_L3/meshes/: floor_1.mtl  floor_4.mtl  floor_5.mtl  floor_6.mtl  floor_8.mtl  floor_9.mtl  model.material  wall_4.mtl  wall_5.mtl
rl_sar/models/hotel_L3_before/: model.config  model.sdf
rl_sar/models/hotel_stair1/: model.config  model.sdf
rl_sar/models/hotel_stair2/: model.config  model.sdf
rl_sar/models/restricted_zone/: model.config  model.sdf
rl_sar/models/stairs/: model.sdf
rl_sar/models/stairs_clone/: model.config  model.sdf
rl_sar/models/stairs_new/: model.config  model.sdf
rl_sar/policy/: fsm.hpp
rl_sar/policy/a1/: base.yaml  fsm.hpp
rl_sar/policy/b2/: base.yaml  fsm.hpp
rl_sar/policy/b2w/: base.yaml  fsm.hpp
rl_sar/policy/g1/: base.yaml  fsm.hpp
rl_sar/policy/go2/: base.yaml  fsm.hpp
rl_sar/policy/go2w/: base.yaml  fsm.hpp
rl_sar/policy/gr1t1/: base.yaml  fsm.hpp
rl_sar/policy/gr1t2/: base.yaml  fsm.hpp
rl_sar/policy/l4w4/: base.yaml  fsm.hpp
rl_sar/policy/lite3/: base.yaml  fsm.hpp
rl_sar/src/: rl_real_a1.cpp  rl_real_g1.cpp  rl_real_go2.cpp  rl_real_l4w4.cpp  rl_real_lite3.cpp  rl_sim.cpp
rl_sar/test/: test_observation_buffer.cpp
rl_sar/worlds/: hotel.world  hotel_raw.world  hotel_raw_new_elevator.world  hotel_stairs.world  hotel_stairs_raw.world  hotel_stairs_walking_person.world  stairs.world
(+97 files in other folders)
