<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_action</name>
  <version>0.0.1</version>
  <description>ROS 2 action client shell for rl_sar actions.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <!-- 빌드툴: 파이썬 패키지 빌드에 필요 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rl_sar</exec_depend>

  <!-- 테스트(선택) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

