<?xml version="1.0"?>
<package format="3">
    <name>rl_sar</name>
    <version>3.0.0</version>
    <description>The rl_sar package</description>

    <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
    <author email="fanziqi614@gmail.com">Ziqi Fan</author>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>action_msgs</depend>
    <depend>std_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>yaml-cpp</depend>
    <depend>robot_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>robot_joint_controller</depend>
    <depend>controller_manager</depend>
    <depend>joint_state_controller</depend>
    <depend>robot_state_publisher</depend>
    <exec_depend>dwa_local_planner</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

